<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/itemListFragment">

    <fragment
        android:id="@+id/itemListFragment"
        android:name="com.lokech.campushub.itemlist.ItemListFragment"
        android:label="@string/actionbar_item_list_text"
        tools:layout="@layout/itemlist_fragment">
        <action
            android:id="@+id/action_itemsFragment_to_newItemFragment"
            app:destination="@id/newItemFragment" />
        <action
            android:id="@+id/action_itemListFragment_to_itemFragment"
            app:destination="@id/itemFragment" />
    </fragment>
    <fragment
        android:id="@+id/newItemFragment"
        android:name="com.lokech.campushub.newitem.NewItemFragment"
        android:label="@string/actionbar_new_item_text"
        tools:layout="@layout/view_pager" />
    <fragment
        android:id="@+id/itemFragment"
        android:name="com.lokech.campushub.item.ItemFragment"
        android:label="@string/actionbar_item_title"
        tools:layout="@layout/view_pager">
        <argument
            android:name="id"
            app:argType="string" />
    </fragment>
</navigation>