<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="itemViewModel"
            type="com.lokech.campushub.item.ItemViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/display_picture"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/spacing_normal"
            app:addClickAnimation="@{true}"
            app:imageUrl="@{itemViewModel.itemLiveData.displayPicture}"
            tools:src="@mipmap/ic_launcher" />


        <RelativeLayout
            android:id="@+id/name_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:minHeight="80dp"
            app:addClickAnimation="@{true}">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/name_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/spacing_normal"
                android:src="@drawable/ic_info" />


            <TextView
                android:id="@+id/name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/name_img"
                android:text="@string/name_title"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name_title"
                android:layout_toEndOf="@+id/name_img"
                android:text="@{itemViewModel.itemLiveData.name}"
                android:textColor="@android:color/black"
                tools:text="Sony headsets" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:padding="@dimen/spacing_normal"
                android:src="@drawable/ic_edit_black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.01dp"
                android:layout_below="@+id/name"
                android:layout_marginTop="@dimen/spacing_normal"
                android:background="@android:color/darker_gray" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/price_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:minHeight="80dp"
            app:addClickAnimation="@{true}">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/price_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/spacing_normal"
                android:src="@drawable/ic_price" />


            <TextView
                android:id="@+id/price_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/price_img"
                android:text="@string/price_title"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/price_title"
                android:layout_toEndOf="@+id/price_img"
                android:text="@{@string/item_price(itemViewModel.itemLiveData.price)}"
                android:textColor="@android:color/black"
                tools:text="3000 UGX" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:padding="@dimen/spacing_normal"
                android:src="@drawable/ic_edit_black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.01dp"
                android:layout_below="@+id/price"
                android:layout_marginTop="@dimen/spacing_normal"
                android:background="@android:color/darker_gray" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/description_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:minHeight="80dp"
            app:addClickAnimation="@{true}">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/description_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/spacing_normal"
                android:src="@drawable/ic_info" />


            <TextView
                android:id="@+id/description_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/description_img"
                android:text="@string/description_title"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/description_title"
                android:layout_toEndOf="@+id/description_img"
                android:text="@{itemViewModel.itemLiveData.description}"
                android:textColor="@android:color/black"
                tools:text="Very nice article" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:padding="@dimen/spacing_normal"
                android:src="@drawable/ic_edit_black" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.01dp"
                android:layout_below="@+id/description"
                android:layout_marginTop="@dimen/spacing_normal"
                android:background="@android:color/darker_gray" />
        </RelativeLayout>
    </LinearLayout>
</layout>